--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -298,5 +298,18 @@ ragioni di sicurezza.
 \end{mdframed}
 
 
+\subsection{Activity diagram}
+I seguenti diagrammi delle attività 
+
+\subsubsection{Registrazione di un utente}
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=0.5\textwidth]{adRegistrazione}
+  \end{center}
+  \caption{Activity diagram della registrazione di un utente}
+  \label{fig:adRegistrazione}
+\end{figure}
+
+
 
 \end{document}
