--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -504,7 +504,7 @@ Stiliamo ora un breve elenco degli endpoints a cui possono accedere i vari ruoli
   \begin{itemize}
     \item UsersController: 
     \begin{itemize}
-      \item \textbf{GET /users/{loggedId}}
+      \item \textbf{GET+PATCH /users/{loggedId}}
     \end{itemize}
     \item ReportsController: \begin{itemize}
       \item \textbf{GET+POST+PUT+DELETE /reports/{loggedId}}
@@ -518,7 +518,7 @@ Stiliamo ora un breve elenco degli endpoints a cui possono accedere i vari ruoli
   \begin{itemize}
     \item UsersController:
     \begin{itemize}
-      \item \textbf{GET /users/{loggedId}} 
+      \item \textbf{GET+PATCH /users/{loggedId}} 
     \end{itemize}
     \item ReportsController:
     \begin{itemize}
