feat: added other sequence diagram

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -569,7 +569,23 @@ Seguono sequence diagram di alcune interazioni e dinamiche importanti del softwa
   \begin{center}
     \includegraphics[width=1\textwidth]{sdReportCreate.pdf}
   \end{center}
-  \caption{Sequence Diagram della creazione di un report} 
+  \caption{Sequence Diagram della creazione di un report + makeNotification} 
+\end{figure}
+\noindent
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=1\textwidth]{login.pdf}
+  \end{center}
+  \caption{Sequence Diagram di un login e della creazione di un token JWT (props)}  
+\end{figure}
+\noindent
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=1\textwidth]{checkMissingReports.pdf}
+  \end{center}
+  \caption{Sequence Diagram del controllo delle rilevazioni mancanti}  
 \end{figure}
 \noindent
 
